test/syntax-errors/missing-lparen-in-fncall/missing-lparen-in-fncall.foster
main = { foo( ; };

foo = { x : Int32 => x };
